<resources>
    <string name="app_name">Safe Way</string>


    <string name="profile_title">Mon profile :</string>
    <string name="profile_pedestrian">Pieton</string>
    <string name="profile_cyclist">Vélo</string>
    <string name="profile_driver">Voiture</string>
    <string name="choice_delay">"Envoyer ma position chaque : "</string>
    <string name="never">jamais</string>
    <string name="choice_show_log">Afficher les informations envoyées.</string>

    <string name="broadcast_action_name">"com.avanade.safeway.safe_way_gps_position"</string>
    <string name="logs_file_name">"gps_logs.txt"</string>


</resources>
